--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>TASKS</div>
         <div id="task-container"></div>
         <div>
-            <input type="button" value="+">
+            <input type="button" value="+" onclick="createTask()">
         </div>
     </div>
 </body>
